--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "lodash": "^4.17.21",
     "qs": "^6.11.0",
     "react": "^17.0.2",
+    "react-calendar": "^4.2.1",
+    "react-csv": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "validator": "^13.9.0",
     "web-vitals": "^2.1.4",
-    "zustand": "^3.6.9"
+    "zustand": "^3.7.2"
   },
   "scripts": {
     "start": "set PORT=8080 && react-scripts start",
