--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "socket.io-client": "^4.7.2",
     "validator": "^13.9.0",
     "web-vitals": "^2.1.4",
     "zustand": "^3.7.2"
