--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^9.6.8",
     "framer-motion": "^5.6.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "qs": "^6.11.0",
     "react": "^17.0.2",
     "react-calendar": "^4.2.1",
